--- a/Code/WorkSpeed.DesktopClient/Resources/Glyphs.xaml
+++ b/Code/WorkSpeed.DesktopClient/Resources/Glyphs.xaml
@@ -69,6 +69,10 @@
         <PathGeometry Figures="M9.47,4H3.53A3.53,3.53,0,0,0,0,7.53v5.94A3.53,3.53,0,0,0,3.53,17H9.47A3.53,3.53,0,0,0,13,13.47V7.53A3.53,3.53,0,0,0,9.47,4ZM10,13.47a.53.53,0,0,1-.53.53H3.53A.53.53,0,0,1,3,13.47V7.53A.53.53,0,0,1,3.53,7H9.47a.53.53,0,0,1,.53.53Z" />
     </GeometryGroup>
 
-    <PathGeometry x:Key="g_Close" Figures="M13.82,10.87A.67.67,0,0,1,13.39,12h-3a.59.59,0,0,1-.43-.19L7,8.54,4,11.81a.59.59,0,0,1-.43.19h-3a.67.67,0,0,1-.43-1.13L4.66,6,.18,1.13A.67.67,0,0,1,.61,0h3A.59.59,0,0,1,4,.19L7,3.46,10,.19A.59.59,0,0,1,10.43,0h3a.67.67,0,0,1,.43,1.13L9.34,6Z" />
+    <PathGeometry x:Key="g_Close" Figures="M13.82,10.87A.67.67,0,0,1,13.39,12h-3a.59.59,0,0,1-.43-.19
+                                           L7,8.54,4,11.81a.59.59,0,0,1-.43.19h-3a.67.67,0,0,1-.43-1.13L4.66,6,.18,1.13A.67.67,0,0,1,.61,0h3A.59.59,0,0,1,4,.19
+                                           L7,3.46,10,.19A.59.59,0,0,1,10.43,0h3a.67.67,0,0,1,.43,1.13L9.34,6Z" />
+
+    <PathGeometry x:Key="g_Emblem" Figures="M9.18.5C6.63.5,4.74,1.6.5,1.6c0,12.67,8.68,16.9,8.68,16.9s8.68-4.22,8.68-16.9C13.61,1.6,11.73.5,9.18.5Z" />
 
 </ResourceDictionary>
