--- a/Code/WorkSpeed.DesktopClient/Resources/Window/HeaderContentControlStyles.xaml
+++ b/Code/WorkSpeed.DesktopClient/Resources/Window/HeaderContentControlStyles.xaml
@@ -2,7 +2,7 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     >
 
-    <Style TargetType="StackPanel" x:Key="st_HeaderContentControl.Container">
+    <Style x:Key="st_HeaderContentControl.Container" TargetType="StackPanel" >
         <Setter Property="Width" Value="Auto" />
         <Setter Property="Height" Value="Auto" />
         <Setter Property="Margin" Value="5,5,5,20" />
@@ -16,7 +16,7 @@
     </Style>
 
     <Style TargetType="HeaderedContentControl">
-        <Setter Property="Margin" Value="10,2"/>
+        <Setter Property="Margin" Value="10,0,10,2"/>
         <Setter Property="Focusable" Value="False"/>
         <Setter Property="HorizontalAlignment" Value="Right" />
         <Setter Property="Template">
@@ -25,7 +25,7 @@
                     <Grid>
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="Auto"  />
-                            <ColumnDefinition Width="134"/>
+                            <ColumnDefinition Width="132"/>
                         </Grid.ColumnDefinitions>
                         <ContentPresenter ContentSource="Header" 
                                           DockPanel.Dock="Left"
